# CSE583-redfin-final-project

./: .gitattributes  .gitignore  LICENSE  README.md  cp_update.txt  environment.yml  pyproject.toml  requirements.txt  rometest.txt
.github/workflows/: python-package-conda.yml
.ipynb_checkpoints/: environment-checkpoint.yml  pyproject-checkpoint.toml  requirements-checkpoint.txt
data/machinelearningresults/: arima_predictions.csv  final_ML_prediction_for_plotting.csv  lstm_predictions.csv  models_predictions.csv  rf_predictions.csv  sarimax_predictions.csv
data/machinelearningresults/.ipynb_checkpoints/: models_predictions-checkpoint.csv
data/processed/: city_market_tracker_after_2019-01-01_2024-10-31.csv  initial_run_filename.txt
data/raw/: test_data.csv
data_engineering/: RefactorIncrementalRun.py  upload_to_azure.sh
docs/technology-reviews/: review-technolgy.md
src/redfinprediction/: DownloadRawData.py  LSTM_model.keras  RefactorRedfinDataCleaning.py  Streamlit.py  arima_sarimax_eval.py  arima_sarimax_training.py  downloadrawdata.py  incrementalrun.py  lstm_training.py  models_predictions.csv  redfindatacleaning.py  test_model.keras
src/redfinprediction/.ipynb_checkpoints/: Streamlit-checkpoint.py  arima_sarimax_eval-checkpoint.py  arima_sarimax_training-checkpoint.py  lstm_eval-checkpoint.py  rf_eval-checkpoint.py  rf_training-checkpoint.py
test/: test_arima_sarimax_eval.py  test_downloadrawdata.py  test_incrementalrun.py  test_lstm_eval.py  test_redfindatacleaning.py  test_rf_training.py
test/.ipynb_checkpoints/: test_arima_sarimax_eval-checkpoint.py  test_arima_sarimax_training-checkpoint.py  test_lstm_training-checkpoint.py  test_rf_eval-checkpoint.py
users/: userstory.md
