[tool.poetry]
name = "redfin-prediction"
version = "0.1.0"
description = "A project for prediction modeling of real estate data."
authors = ["CSE583 redfin"]
license = "MIT"
readme = "README.md"
packages = [{include = "src.redfinprediction"}]

[tool.poetry.dependencies]
python = "^3.9"  # Updated to match the python version in the environment.yaml
pandas = "^1.5.0"
numpy = "^1.23.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.0"
statsmodels = "^0.13.0"
pmdarima = "^1.8.0"
requests = "^2.28.0"  # Added from environment.yml
pickle5 = "^0.0.11"  # Added from environment.yml
streamlit = "^1.20.0"  # Added from environment.yml

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.0"
mypy = "^0.961"
toml = "^0.10.2"  # Added to match environment.yml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
