[tool.poetry]
name = "redfin-prediction"
version = "0.1.0"
description = "A project for prediction modeling of real estate data."
authors = ["CSE583 redfin"]
license = "MIT"
readme = "README.md"
packages = [{include = "src.redfinprediction"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.23.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.0"
statsmodels = "^0.13.0"
pmdarima = "^1.8.0"
tensorflow = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.0"
mypy = "^0.961"
unittest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
